@@ -4,5 +4,6 @@ default;<default portfolio>;18331;EURONEXT;EUR;1.196000;6;15;FR0003500008
 us;;;NASDAQ;USD;1.196000;3;5;US6289081050
 crb;CRB bug hunting;FR0010270033;EURONEXT;EUR;1.196000;3;5;FR0003502079
 sf1842520;SF bug 1842520;;EURONEXT;EUR;1.196000;3;5;FR0003502079
+indices;Debug the Indices;;EURONEXT;EUR;1.196000;3;5;FR0003502079
 cac40;Cac40;;EURONEXT;EUR;1.196000;3;5;FR0003500008
 empty;Empty Matrix;;EURONEXT;EUR;1.196000;3;5;FR0003502079
